fix: videos page alignment fixes

--- a/src/app/(pages)/(static)/videos/style.module.css
+++ b/src/app/(pages)/(static)/videos/style.module.css
@@ -1,6 +1,6 @@
 .embla{
   max-width: 78%;
-  margin: auto;
+  margin-right: 6rem;
   /* margin-right: 240px; */
   /* background-color: beige; */
   --slide-height: 340px;
@@ -121,7 +121,7 @@
 .motion {
   width: 275px;
   
-  margin-left: 10px;
+  margin-right: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
